syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/singl3focus/grpc_api/chat-server/pkg/chat_server_v1;chat_server_v1";

service ChatServerV1 {
    rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
    rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
    repeated string usernames = 1;
}

message CreateChatResponse {
    int64 id = 1;
}

message DeleteChatRequest {
    int64 id = 1;
}

message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}